--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -38,56 +38,64 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/topSelection"
+            android:id="@+id/selection_container"
             android:layout_width="match_parent"
-            android:layout_height="4dp"
-
-            android:visibility="gone"
-            android:background="@color/recordButtonColor"
-
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/endSelection"
-            android:layout_width="4dp"
             android:layout_height="match_parent"
+            >
 
-            android:visibility="gone"
-            android:background="@color/recordButtonColor"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/topSelection"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:visibility="visible"
+                android:background="@color/recordButtonColor"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/bottomSelection"
-            android:layout_width="match_parent"
-            android:layout_height="4dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
 
-            android:visibility="gone"
-            android:background="@color/recordButtonColor"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/endSelection"
+                android:layout_width="4dp"
+                android:layout_height="match_parent"
 
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:visibility="visible"
+                android:background="@color/recordButtonColor"
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/startSelection"
-            android:layout_width="4dp"
-            android:layout_height="match_parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
 
-            android:visibility="gone"
-            android:background="@color/recordButtonColor"
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/bottomSelection"
+                android:layout_width="match_parent"
+                android:layout_height="4dp"
 
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+                android:visibility="visible"
+                android:background="@color/recordButtonColor"
+
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/startSelection"
+                android:layout_width="4dp"
+                android:layout_height="match_parent"
+
+                android:visibility="visible"
+                android:background="@color/recordButtonColor"
+
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
