--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -33,6 +33,8 @@
             android:visibility="visible"
             />
 
+        <!--    TEST    -->
+
         <TextView
             android:id="@+id/cell_data"
             android:layout_width="match_parent"
