--- a/app/src/main/res/layout/cell_edit.xml
+++ b/app/src/main/res/layout/cell_edit.xml
@@ -4,13 +4,28 @@
     android:layout_height="80dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="12dp"
+        android:layout_margin="10dp"
         android:backgroundTint="@color/editCellColor"
-        />
+        >
+
+        <TextView
+            android:id="@+id/cell_data"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:layout_gravity="center_vertical"
+            android:gravity="center"
+            android:maxLines="1"
+            android:textSize="10dp"
+            android:textColor="@color/colorPrimary"
+            tools:text="Cell Data"
+            />
+
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
