--- a/app/src/main/res/layout/table_view_cell_layout.xml
+++ b/app/src/main/res/layout/table_view_cell_layout.xml
@@ -17,19 +17,21 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
+        <!--    SELECTION CONTAINER    -->
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/selection_container"
+            android:background="@color/colorPrimary"
+            android:visibility="visible"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            />
+
         <!--    EDIT CELL    -->
 
         <include
             android:id="@+id/edit_cell"
             layout="@layout/cell_edit"
-            android:visibility="visible"
-            />
-
-        <!--    SELECTION CONTAINER    -->
-
-        <include
-            android:id="@+id/selection_container"
-            layout="@layout/cell_selector"
             android:visibility="visible"
             />
 
