--- a/app/src/main/res/layout/table_view_column_header_layout.xml
+++ b/app/src/main/res/layout/table_view_column_header_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="@dimen/column_header_height"
 
         android:src="@drawable/ic_timeline"
-        android:tint="@color/colorPrimary"
+        app:tint="@color/colorPrimary"
         android:background="@color/cardBackground"
 
         app:layout_constraintTop_toTopOf="parent"
