--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,4 +4,11 @@
         <attr name="cellColor" format="color"/>
         <attr name="buttonColor" format="color"/>
     </declare-styleable>
+
+    <declare-styleable name="ColumnView">
+        <attr name="backgroundColor" format="color"/>
+        <attr name="barNumber" format="integer"/>
+    </declare-styleable>
+
+
 </resources>
